# devenv-trunk-demo

./: README.md
.devcontainer/: devcontainer.json
cmake/: CMakeLists.txt  README.md  input.cc
